MFH [rev 1.21]: Fixed handling of the case when --with-boost-includes is                 not given on the command line.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_4_BRANCH/juggler@15360 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/external/configure.in
+++ b/external/configure.in
@@ -168,6 +168,13 @@ if test "x$PYTHON" != "xno" ; then
 fi
 
 # -----------------------------------------------------------------------------
+# Perform extra handling of input from the command line.
+# -----------------------------------------------------------------------------
+if test "x$BOOST_INCLUDES" = "xno" ; then
+   BOOST_INCLUDES="$BOOST_ROOT/include"
+fi
+
+# -----------------------------------------------------------------------------
 # Deal with installing our external dependencies.
 # -----------------------------------------------------------------------------
 TARGETS=''
