My furious coding on the new display window custom editor has reached a point where things are fairly stable, so I am officially adding the display window custom editor to the build and to the VRJConfig Control Panel.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@15392 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/configure.in
+++ b/juggler/modules/vrjuggler/configure.in
@@ -660,6 +660,9 @@ AC_CONFIG_FILES([
    vrjconfig/Makefile
    vrjconfig/Makefile.inc
    vrjconfig/customeditors/Makefile
+   vrjconfig/customeditors/display_window/build.xml
+   vrjconfig/customeditors/display_window/Makefile
+   vrjconfig/customeditors/display_window/Makefile.inc
    vrjconfig/customeditors/intersense/build.xml
    vrjconfig/customeditors/intersense/Makefile
    vrjconfig/customeditors/intersense/Makefile.inc
