--- a/juggler/modules/vrjuggler/vrjconfig/customeditors/Makefile.in
+++ b/juggler/modules/vrjuggler/vrjconfig/customeditors/Makefile.in
@@ -47,14 +47,16 @@ BUILD_PROXY_EDITOR=	@BUILD_PROXY_EDITOR@
 BUILD_JAVA3D_EDITOR=	@BUILD_JAVA_3D_EDITOR@
 
 # Subdirectories used for recursion through the source tree.
-SUBDIR= #displaywindoweditor 
+SUBDIR=
 
 ifeq ($(BUILD_JAVA), Y)
    ifeq ($(BUILD_PROXY_EDITOR), Y)
       SUBDIR+=	proxyeditor
    endif
-   SUBDIR+= intersense
-   SUBDIR+= pinchglove
+
+   SUBDIR+=	display_window	\
+		intersense	\
+		pinchglove
 endif
 
 # Subdirectories to compile.
@@ -71,5 +73,8 @@ customeditors:
 
 install-customeditors:
 	$(MAKE) RECTARGET=install-editor recursive
+
+clean clobber:
+	$(MAKE) RECTARGET=$@ recursive
 
 include $(MKPATH)/dpp.subdir.mk
